@@ -277,8 +277,8 @@ The PlantUML Report plugin accepts several options that might be passed as repor
 
 [options="header"]
 |===
-| Property                   | Description                                                                                                           | Default
-| plantuml.report.format     | Specifies the output file format of the generated PlantUML-Diagrams (optional)                                        | SVG
-| plantuml.report.rendermode | Specifies the renderer used for the generated PlantUML-Diagrams, currently supporting GraphViz and Smetana (optional) | GRAPHVIZ
+| Property                   | Description                                                                                                                  | Default
+| plantuml.report.format     | Specifies the output file format of the generated PlantUML-Diagrams (optional)                                               | SVG
+| plantuml.report.rendermode | Specifies the renderer used for the generated PlantUML-Diagrams, currently supporting GraphViz (default), Smetana, and Elk   | GRAPHVIZ
 |===
 
